# TeleVault

./: .env.example  .gitignore  .markdownlint.jsonc  CHANGELOG.md  Dockerfile  README.md  TODO.md  changes.diff  docker-compose.yml  reset-docker.ps1  reset-docker.sh
backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml  startup.sh
backend/alembic/: env.py
backend/alembic/versions/: 20260320_dc8d933566f4_initial_schema.py  20260321_ef22ebcb59b6_add_multi_account_fields.py
backend/app/: main.py  test_upload.py
backend/app/api/: accounts.py  auth.py  channels.py  debug.py  dialogs.py  events.py  files.py  folders.py  icons.py  progress.py  search.py
backend/app/core/: auth.py  config.py  deps.py  encryption.py  logging.py  utils.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  channel.py  event.py  file.py  folder.py  refresh_token.py  split.py  telegram_account.py  user.py
backend/app/schemas/: accounts.py  auth.py  channels.py  dialogs.py  events.py  files.py  folders.py  pagination.py  progress.py  search.py
backend/app/services/: auth.py  channel_membership.py  channels.py  download.py  event_broadcaster.py  events.py  files.py  folders.py  progress.py  search.py  telegram_login.py  upload.py  upload_queue.py
backend/app/static/: playground.html
backend/app/telegram/: __init__.py  client_pool.py  fast_upload.py  operations.py
backend/static/: hash-worker.js
backend/tests/: conftest.py  test_config_parallel.py  test_fast_upload.py  test_upload_offset.py  test_upload_queue.py
docker/: entrypoint.sh  nginx-aio.conf  (+1 more)
(+142 files in other folders)
